--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </p>
     </div>
     <div class="plan-items">
-        <div class="food-plan">
+        <div class="food plan-item">
             <img src="icons/food.png" alt="Food">
             <h3>
                 Food for a family
@@ -68,13 +68,38 @@
                 velit mollit.
             </p>
         </div>
-        <div class="shelter-plan">
-
+        <div class="shelter plan-item">
+            <img src="icons/shelter.png" alt="Food">
+            <h3>
+                Shelter for a family
+            </h3>
+            <p>
+                Amet minim mollit non deserunt
+                ullamco est sit aliqua dolor do amet
+                sint. Velit officia consequat duis enim
+                velit mollit.
+            </p>
         </div>
-        <div class="education-plan">
-
+        <div class="education plan-item">
+            <img src="icons/Frame-1.png" alt="Food">
+            <h3>
+                Education for a child
+            </h3>
+            <p>
+                Amet minim mollit non deserunt
+                ullamco est sit aliqua dolor do amet
+                sint. Velit officia consequat duis enim
+                velit mollit.
+            </p>
         </div>
     </div>
+</section>
+
+<section>
+    <div class="get-updates common-content">
+        <h2>Get My Updates</h2>
+    </div>
+
 </section>
 
 
