header and donate section done

--- a/index.html
+++ b/index.html
@@ -98,8 +98,13 @@
 <section>
     <div class="get-updates common-content">
         <h2>Get My Updates</h2>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+            deterruisset. No duo populo animal noluisse, enim</p>
     </div>
-
+    <div class="subscribe-update">
+        <input type="text" placeholder="Email">
+        <button type="Submit">Subscribe</button>
+    </div>
 </section>
 
 
