--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@1,700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <section class="header-section">
     <div class="header-content">
         <div class="bg-overlay">
             <h1>Let's Help Those Who Are <br> More In Need</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                deterruisset. No duo populo animal noluisse, enim</p>
+            <p>We all can do our bit. Let's feed the hungry and help the less fortunate among us. Together we can make
+                this world a better place.</p>
             <a target="_blank" href="https://www.google.com/">Donate Now</a>
         </div>
     </div>
@@ -27,8 +29,8 @@
 <section class="donate-section">
     <div class="donate-content common-content">
         <h2>Donate Today</h2>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-            deterruisset. No duo populo animal noluisse, enim</p>
+        <p>Donate now to help children and their families move themselves from a life of poverty to a future with
+            opportunity.</p>
     </div>
     <div class="donate-options">
         <h3>100tk</h3>
@@ -51,8 +53,8 @@
             Our Donate Plan
         </h2>
         <p>
-            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-            deterruisset. No duo populo animal noluisse, enim
+            Guilt-Free Giving, With a Plan ... Grab a pen and a sheet of paper. This year, your giving is going to be
+            driven by thought, not guilt.
         </p>
     </div>
     <div class="plan-items">
@@ -62,10 +64,8 @@
                 Food for a family
             </h3>
             <p>
-                Amet minim mollit non deserunt
-                ullamco est sit aliqua dolor do amet
-                sint. Velit officia consequat duis enim
-                velit mollit.
+                No military family should have to wonder where they'll find their next meal. Every donation helps us
+                provide more meals to more families
             </p>
         </div>
         <div class="shelter plan-item">
@@ -74,10 +74,8 @@
                 Shelter for a family
             </h3>
             <p>
-                Amet minim mollit non deserunt
-                ullamco est sit aliqua dolor do amet
-                sint. Velit officia consequat duis enim
-                velit mollit.
+                Family Promise delivers innovative solutions for family homelessness including prevention, shelter, and
+                stabilization services.
             </p>
         </div>
         <div class="education plan-item">
@@ -86,10 +84,8 @@
                 Education for a child
             </h3>
             <p>
-                Amet minim mollit non deserunt
-                ullamco est sit aliqua dolor do amet
-                sint. Velit officia consequat duis enim
-                velit mollit.
+                Education brings self-discipline, a sense of responsibility, team-work among children and prevents them
+                from feeling social insecurity.
             </p>
         </div>
     </div>
@@ -98,8 +94,7 @@
 <section>
     <div class="get-updates common-content">
         <h2>Get My Updates</h2>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-            deterruisset. No duo populo animal noluisse, enim</p>
+        <p>Want to get our new updates! Subscribe Now</p>
     </div>
     <div class="subscribe-update">
         <input type="text" placeholder="Email">
@@ -111,5 +106,9 @@
 <body>
 
 </body>
+<footer class="footer">
+    <h3>Be Humble</h3>
+    <p>I did it</p>
+</footer>
 
 </html>
