header and donate section done

--- a/index.html
+++ b/index.html
@@ -15,97 +15,114 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
-<section class="header-section">
-    <div class="header-content">
-        <div class="bg-overlay">
-            <h1>Let's Help Those Who Are <br> More In Need</h1>
-            <p>We all can do our bit. Let's feed the hungry and help the less fortunate among us. Together we can make
-                this world a better place.</p>
-            <a target="_blank" href="https://www.google.com/">Donate Now</a>
-        </div>
-    </div>
-</section>
-
-<section class="donate-section">
-    <div class="donate-content common-content">
-        <h2>Donate Today</h2>
-        <p>Donate now to help children and their families move themselves from a life of poverty to a future with
-            opportunity.</p>
-    </div>
-    <div class="donate-options">
-        <h3>100tk</h3>
-        <h3 id="selected">200tk</h3>
-        <h3>500tk</h3>
-        <h3>1000tk</h3>
-        <h3>5000tk</h3>
-    </div>
-    <div class="enter-amount">
-        <input type="text" placeholder="Other Amount (Taka)">
-    </div>
-    <div class="amount-button">
-        <a href="#">Donate Now</a>
-    </div>
-</section>
-
-<section class="donate-plan-section">
-    <div class="donate-plan-content common-content">
-        <h2>
-            Our Donate Plan
-        </h2>
-        <p>
-            Guilt-Free Giving, With a Plan ... Grab a pen and a sheet of paper. This year, your giving is going to be
-            driven by thought, not guilt.
-        </p>
-    </div>
-    <div class="plan-items">
-        <div class="food plan-item">
-            <img src="icons/food.png" alt="Food">
-            <h3>
-                Food for a family
-            </h3>
-            <p>
-                No military family should have to wonder where they'll find their next meal. Every donation helps us
-                provide more meals to more families
-            </p>
-        </div>
-        <div class="shelter plan-item">
-            <img src="icons/shelter.png" alt="Food">
-            <h3>
-                Shelter for a family
-            </h3>
-            <p>
-                Family Promise delivers innovative solutions for family homelessness including prevention, shelter, and
-                stabilization services.
-            </p>
-        </div>
-        <div class="education plan-item">
-            <img src="icons/Frame-1.png" alt="Food">
-            <h3>
-                Education for a child
-            </h3>
-            <p>
-                Education brings self-discipline, a sense of responsibility, team-work among children and prevents them
-                from feeling social insecurity.
-            </p>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="get-updates common-content">
-        <h2>Get My Updates</h2>
-        <p>Want to get our new updates! Subscribe Now</p>
-    </div>
-    <div class="subscribe-update">
-        <input type="text" placeholder="Email">
-        <button type="Submit">Subscribe</button>
-    </div>
-</section>
-
 
 <body>
+    <section class="header-section">
+        <div class="header-content">
+            <div class="bg-overlay">
+                <h1>Let's Help Those Who Are <br> More In Need</h1>
+                <p>We all can do our bit. Let's feed the hungry and help the less fortunate among us. Together we can
+                    make
+                    this world a better place.</p>
+                <a target="_blank" href="https://www.google.com/">Donate Now</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="donate-section">
+        <div class="donate-content common-content">
+            <h2>Donate Today</h2>
+            <p>Donate now to help children and their families move themselves from a life of poverty to a future with
+                opportunity.</p>
+        </div>
+        <div class="donate-options">
+            <h3>100tk</h3>
+            <h3 id="selected">200tk</h3>
+            <h3>500tk</h3>
+            <h3>1000tk</h3>
+            <h3>5000tk</h3>
+        </div>
+        <div class="enter-amount">
+            <input type="text" placeholder="Other Amount (Taka)">
+        </div>
+        <div class="amount-button">
+            <a href="#">Donate Now</a>
+        </div>
+    </section>
+
+    <section class="donate-plan-section">
+        <div class="donate-plan-content common-content">
+            <h2>
+                Our Donate Plan
+            </h2>
+            <p>
+                Guilt-Free Giving, With a Plan ... Grab a pen and a sheet of paper. This year, your giving is going to
+                be
+                driven by thought, not guilt.
+            </p>
+        </div>
+        <div class="plan-items">
+            <div class="food plan-item">
+                <img src="icons/food.png" alt="Food">
+                <h3>
+                    Food for a family
+                </h3>
+                <p>
+                    No military family should have to wonder where they'll find their next meal. Every donation helps us
+                    provide more meals to more families
+                </p>
+            </div>
+            <div class="shelter plan-item">
+                <img src="icons/shelter.png" alt="Food">
+                <h3>
+                    Shelter for a family
+                </h3>
+                <p>
+                    Family Promise delivers innovative solutions for family homelessness including prevention, shelter,
+                    and
+                    stabilization services.
+                </p>
+            </div>
+            <div class="education plan-item">
+                <img src="icons/Frame-1.png" alt="Food">
+                <h3>
+                    Education for a child
+                </h3>
+                <p>
+                    Education brings self-discipline, a sense of responsibility, team-work among children and prevents
+                    them
+                    from feeling social insecurity.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="our-works-section">
+        <div class="our-works">
+            <h2>Our works</h2>
+            <div class="works-images">
+                <img src="images/donation10.jpg" alt="">
+                <img src="images/donation4.jpg" alt="">
+                <img src="images/donation11.jpg" alt="">
+            </div>
+
+        </div>
+
+    </section>
+
+    <section class="get-updates-section">
+        <div class="get-updates common-content">
+            <h2>Get My Updates</h2>
+            <p>Want to get our new updates! Subscribe Here</p>
+        </div>
+        <div class="subscribe-update">
+            <input type="text" placeholder="Email">
+            <button type="Submit">Subscribe</button>
+        </div>
+    </section>
 
 </body>
+
 <footer class="footer">
     <h3>Be Humble</h3>
     <p>I did it</p>
